[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Player/LedgeWallDetector.gd" type="Script" id=1]

[node name="LedgeWallDetector" type="Position2D"]
script = ExtResource( 1 )

[node name="RayTop" type="RayCast2D" parent="."]
position = Vector2( 30, -100 )
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="RayBottom" type="RayCast2D" parent="."]
position = Vector2( 30, 0 )
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 2
